--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,8 @@ h2 {
   color: #0d6efd;
   margin-bottom: 1.5rem;
 }
+button {
+  background-color: #0d6efd !important;
+  border-color: #0d6efd !important;
+  color: #fff !important;
+}
